[package]
name = "sniper_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.43"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
regex="1.8.4"
levenshtein = "1.0.5"