[package]
name = "sniper_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex="1.8.4"
levenshtein = "1.0.5"
vibrato = "0.5.0"
zstd = "0.12.3"
wasm-bindgen="0.2"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type=["cdylib"]